GuideFilterTest.java fixato